// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=ARTICLES"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=ARTICLES"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=ARTICLES&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=CI_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYUBAFC"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYUBAFC"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=NYUBAFC&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYUSC"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=NYUSC"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=NYUSC&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="https://guides.nyu.edu" title="Guides to help you find library resources on specific subjects and courses" target="_blank">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield" placeholder="" aria-describedby=""></span><select id="tab-1-scope" class="bobcat_embed_select_value" aria-label="Select search scope">
            <option value="CI_NYU_CONSORTIA">Library catalog</option>
            <option value="NYU_CONSORTIA">Library catalog (excluding articles)</option>
            <option value="ARTICLES">Articles</option>
            <option value="NYUBAFC">NYU Avery Fisher Center (A/V materials)</option>
            <option value="NYUSC">NYU Special Collections</option>
          </select><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span></div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&amp;lang=en&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.library.nyu.edu/discovery/citationlinker?vid=01NYU_INST:NYU" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU&tab=Unified_Slot&search_scope=CI_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYU_HOME' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings" target="_blank">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Articles &amp; Databases</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield"></span>
          <!----><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span>
        </div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li><a href="https://search.library.nyu.edu/discovery/citationlinker?vid=01NYU_INST:NYU" target="_blank">For full text articles use the search by citation tool</a></li>
          <li><a href="https://search.library.nyu.edu/discovery/account?vid=01NYU_INST:NYU&amp;section=overview" target="_blank" class="external-link">My Library Account</a></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'all-whitespace search': '    ' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD&search_scope=CI_NYUAD_NYU"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'empty search': '' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD&search_scope=CI_NYUAD_NYU"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'non-empty search': 'art' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?institution=NYUAD&vid=01NYU_AD:AD&tab=default_slot&search_scope=CI_NYUAD_NYU&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUAD' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/adarch" title="Search databases for articles or browse databases by subject" target="_blank">Articles &amp; Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Search for library materials that are held at one location for a particular course">Course Reserves</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Guides to help you find library resources on specific subjects and courses">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="#" title="My Accounts">My Accounts</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield"></span>
          <!----><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span>
        </div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.abudhabi.library.nyu.edu/discovery/citationlinker?vid=01NYU_AD:AD" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH&tab=default_slot&search_scope=CI_NYUSH&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_NYUSH_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_NYUSH_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH&tab=default_slot&search_scope=CI_NYUSH_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_articles"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=CI_articles"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH&tab=default_slot&search_scope=CI_articles&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&search_scope=NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH&tab=default_slot&search_scope=NYUSH&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: prod ] > 'NYUSH' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Guides to help you find library resources on specific subjects and courses">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="#" title="My Accounts">My Accounts</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield" placeholder="" aria-describedby=""></span><select id="tab-1-scope" class="bobcat_embed_select_value" aria-label="Select search scope">
            <option value="CI_NYUSH">All at Shanghai</option>
            <option value="CI_NYUSH_NYU_CONSORTIA">All at NYU</option>
            <option value="CI_articles">All Articles</option>
            <option value="NYUSH">Classic Search</option>
          </select><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span></div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.shanghai.library.nyu.edu/discovery/citationlinker?vid=01NYU_US:SH" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=ARTICLES"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=ARTICLES"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'ARTICLES' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=ARTICLES&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=CI_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYUBAFC"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYUBAFC"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUBAFC' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=NYUBAFC&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYUSC"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=NYUSC"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSC' > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=NYUSC&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="https://guides.nyu.edu" title="Guides to help you find library resources on specific subjects and courses" target="_blank">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield" placeholder="" aria-describedby=""></span><select id="tab-1-scope" class="bobcat_embed_select_value" aria-label="Select search scope">
            <option value="CI_NYU_CONSORTIA">Library catalog</option>
            <option value="NYU_CONSORTIA">Library catalog (excluding articles)</option>
            <option value="ARTICLES">Articles</option>
            <option value="NYUBAFC">NYU Avery Fisher Center (A/V materials)</option>
            <option value="NYUSC">NYU Special Collections</option>
          </select><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span></div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&amp;lang=en&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.library.nyu.edu/discovery/citationlinker?vid=01NYU_INST:NYU_DEV" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'all-whitespace search': '    ' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'empty search': '' 1`] = `"https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&search_scope=CI_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU_HOME' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYU_CONSORTIA > 'non-empty search': 'art' 1`] = `"https://search.library.nyu.edu/discovery/search?institution=NYU&vid=01NYU_INST:NYU_DEV&tab=Unified_Slot&search_scope=CI_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYU_HOME' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings" target="_blank">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Articles &amp; Databases</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield"></span>
          <!----><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span>
        </div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.library.nyu.edu/discovery/search?vid=01NYU_INST:NYU_DEV&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li><a href="https://search.library.nyu.edu/discovery/citationlinker?vid=01NYU_INST:NYU_DEV" target="_blank">For full text articles use the search by citation tool</a></li>
          <li><a href="https://search.library.nyu.edu/discovery/account?vid=01NYU_INST:NYU_DEV&amp;section=overview" target="_blank" class="external-link">My Library Account</a></li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'all-whitespace search': '    ' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD_DEV&search_scope=CI_NYUAD_NYU"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'empty search': '' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD_DEV&search_scope=CI_NYUAD_NYU"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUAD' > engine search should call \`window.open\` with correct URL > with hardcoded scope: CI_NYUAD_NYU > 'non-empty search': 'art' 1`] = `"https://search.abudhabi.library.nyu.edu/discovery/search?institution=NYUAD&vid=01NYU_AD:AD_DEV&tab=default_slot&search_scope=CI_NYUAD_NYU&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUAD' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/adarch" title="Search databases for articles or browse databases by subject" target="_blank">Articles &amp; Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Search for library materials that are held at one location for a particular course">Course Reserves</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Guides to help you find library resources on specific subjects and courses">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="#" title="My Accounts">My Accounts</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield"></span>
          <!----><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span>
        </div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.abudhabi.library.nyu.edu/discovery/search?vid=01NYU_AD:AD_DEV&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.abudhabi.library.nyu.edu/discovery/citationlinker?vid=01NYU_AD:AD_DEV" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH_DEV&tab=default_slot&search_scope=CI_NYUSH&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_NYUSH_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_NYUSH_NYU_CONSORTIA"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_NYUSH_NYU_CONSORTIA' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH_DEV&tab=default_slot&search_scope=CI_NYUSH_NYU_CONSORTIA&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_articles"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=CI_articles"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'CI_articles' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH_DEV&tab=default_slot&search_scope=CI_articles&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'all-whitespace search': '    ' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'empty search': '' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&search_scope=NYUSH"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > engine search should call \`window.open\` with correct URL > with user-selected search scope > 'NYUSH' > 'non-empty search': 'art' 1`] = `"https://search.shanghai.library.nyu.edu/discovery/search?institution=NYUSH&vid=01NYU_US:SH_DEV&tab=default_slot&search_scope=NYUSH&mode=basic&displayMode=full&bulkSize=10&dum=true&displayField=all&primoQueryTemp=art&query=any,contains,art&sortby=rank&lang=en"`;

exports[`App [ VITE_DEPLOY_ENV: undefined ] > 'NYUSH' > has the correct HTML 1`] = `
"<div class="bobcat_embed">
  <div class="bobcat_embed_tabs_wrapper">
    <div class="bobcat_embed_tabs">
      <ul role="tablist">
        <li class="bobcat_embed_tabs_selected bobcat_embed_tabs_first" role="tab"><a href="#" title="Search NYU's catalog for books, journals, scripts, scores, archival materials, NYU dissertations, videos, sound recordings">Catalog Search</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="http://guides.nyu.edu/arch" title="Search databases for articles or browse databases by subject" target="_blank">Databases</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="https://ares.library.nyu.edu/" title="Search for library materials that are held at one location for a particular course" target="_blank">Course Reserves</a></li>
        <li class="bobcat_embed_tabs_inside" role="tab"><a href="#" title="Guides to help you find library resources on specific subjects and courses">Research Guides</a></li>
        <li class="bobcat_embed_tabs_last" role="tab"><a href="#" title="My Accounts">My Accounts</a></li>
      </ul>
    </div>
  </div>
  <div class="bobcat_embed_searchbox">
    <div class="bobcat_embed_tab_content">
      <form class="tab-1-search-form">
        <div class="bobcat_embed_search_field"><span class="bobcat_embed_"><label for="tab-1-query">Search for </label><input id="tab-1-query" aria-label="Search Bobcat" type="text" class="bobcat_embed_searchbox_textfield" placeholder="" aria-describedby=""></span><select id="tab-1-scope" class="bobcat_embed_select_value" aria-label="Select search scope">
            <option value="CI_NYUSH">All at Shanghai</option>
            <option value="CI_NYUSH_NYU_CONSORTIA">All at NYU</option>
            <option value="CI_articles">All Articles</option>
            <option value="NYUSH">Classic Search</option>
          </select><span class="bobat_embed_searchbox_submit_container"><input aria-label="Search" class="bobcat_embed_searchbox_submit" name="Submit" type="submit" value="GO"></span></div>
      </form>
      <div class="bobcat_embed_links">
        <ul>
          <li><a href="https://search.shanghai.library.nyu.edu/discovery/search?vid=01NYU_US:SH_DEV&amp;mode=advanced" target="_blank">Advanced search</a></li>
          <li>Need the full text of an article? <a href="https://search.shanghai.library.nyu.edu/discovery/citationlinker?vid=01NYU_US:SH_DEV" target="_blank">Use the search by citation tool</a>.</li>
        </ul>
      </div>
    </div>
  </div>
</div>"
`;
